test/tests/compiler/15_arrays_and_pointer_arithmetic/valid/declarators/plx1_kw_array_size.plx
pub fn main(none) i32 {
    arr_nil: [nil]i32;
    arr_false: [false]i32;
    
    arr_true: [true]i32 = $(10)
    return 10 - arr_true[0]
}
